force-app/main/default/objects/Physician_Event__c/Physician_Event__c.object-meta.xml
<CustomObject>
    <description>Events of Appointment for Physician.</description>
    <label>Physician Event</label>
    <nameField>
        <displayFormat>PE-{0}</displayFormat>
        <label>Event No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physician Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>