force-app/main/default/objects/Physician_Event__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Physician Events</relationshipLabel>
    <relationshipName>Physician_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>