force-app/main/default/objects/Physician_Event__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <label>Physician</label>
    <referenceTo>Physician__c</referenceTo>
    <relationshipLabel>Physician Events</relationshipLabel>
    <relationshipName>Physician_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>