force-app/main/default/objects/Physician_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Patient__c</columns>
    <columns>Physician__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>